# parallel_performance_test

./: .gitignore  AlgorithmTester.cpp  AlgorithmTester.hpp  CMakeLists.txt  Initializer.hpp  MappingPolicy.hpp  MemoryAccessPolicy.hpp  Operations.hpp  ParallelPerformanceTester.hpp  README.md  Tester.hpp  Worker.hpp  parallel_perf_test  parallel_perf_test.cpp
data/: data.json
scripts/: plot_benchmark_data.py
